--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "daisyui": "^2.19.0",
+    "framer-motion": "^6.5.0",
+    "next": "12.2.2",
+    "prettier": "^2.7.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-xarrows": "^2.0.2",
+    "scrollmagic": "^2.0.8"
   },
   "devDependencies": {
-    "@types/node": "17.0.23",
-    "@types/react": "17.0.42",
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0",
-    "typescript": "4.6.2"
+    "@tailwindcss/typography": "^0.5.3",
+    "@types/node": "18.0.3",
+    "@types/react": "18.0.15",
+    "autoprefixer": "^10.4.7",
+    "eslint": "8.19.0",
+    "eslint-config-next": "12.2.2",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.5",
+    "typescript": "4.7.4"
   }
 }
