--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-hook/intersection-observer": "^3.1.1",
+    "classnames": "^2.3.1",
     "daisyui": "^2.19.0",
     "framer-motion": "^6.5.0",
     "next": "12.2.2",
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive": "^9.0.0-beta.10",
     "react-xarrows": "^2.0.2",
     "scrollmagic": "^2.0.8"
   },
