--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
   },
   "dependencies": {
     "@react-hook/intersection-observer": "^3.1.1",
-    "classnames": "^2.3.1",
-    "daisyui": "^2.19.0",
-    "framer-motion": "^6.5.0",
-    "next": "12.2.2",
+    "classnames": "^2.3.2",
+    "daisyui": "^2.29.0",
+    "framer-motion": "^7.3.6",
+    "next": "12.3.1",
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-responsive": "^9.0.0-beta.10",
+    "react-responsive": "^9.0.0",
     "react-xarrows": "^2.0.2",
     "scrollmagic": "^2.0.8"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.3",
-    "@types/node": "18.0.3",
-    "@types/react": "18.0.15",
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.5",
-    "typescript": "4.7.4"
+    "@tailwindcss/typography": "^0.5.7",
+    "@types/node": "18.7.18",
+    "@types/react": "18.0.20",
+    "autoprefixer": "^10.4.11",
+    "eslint": "8.23.1",
+    "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
+    "typescript": "4.8.3"
   }
 }
