--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@react-hook/intersection-observer": "^3.1.1",
+    "@sendgrid/mail": "^7.7.0",
     "classnames": "^2.3.2",
-    "daisyui": "^2.29.0",
-    "framer-motion": "^7.3.6",
-    "next": "12.3.1",
+    "daisyui": "^2.38.0",
+    "framer-motion": "^7.6.4",
+    "next": "13.0.1",
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,13 +24,13 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
-    "@types/node": "18.7.18",
-    "@types/react": "18.0.20",
-    "autoprefixer": "^10.4.11",
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.1",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "typescript": "4.8.3"
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.24",
+    "autoprefixer": "^10.4.13",
+    "eslint": "8.26.0",
+    "eslint-config-next": "13.0.1",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
+    "typescript": "4.8.4"
   }
 }
