--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	"type": "module",
 	"dependencies": {
 		"@tailwindcss/typography": "^0.5.9",
-		"daisyui": "^2.47.0"
+		"daisyui": "^2.47.0",
+		"svelte-inview": "^3.0.2"
 	}
 }
