--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"postcss": "^8.4.23",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.0",
+		"saos": "^1.3.1",
 		"svelte": "^3.59.1",
 		"svelte-check": "^3.4.2",
 		"tailwindcss": "^3.3.2",
