--- a/package.json
+++ b/package.json
@@ -14,34 +14,37 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.34.3",
-		"@skeletonlabs/skeleton": "^1.6.2",
+		"@playwright/test": "^1.38.1",
+		"@skeletonlabs/skeleton": "^2.2.0",
+		"@skeletonlabs/tw-plugin": "^0.2.1",
 		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/adapter-vercel": "^3.0.0",
-		"@sveltejs/kit": "^1.19.0",
-		"@tailwindcss/typography": "^0.5.9",
-		"@typescript-eslint/eslint-plugin": "^5.59.7",
-		"@typescript-eslint/parser": "^5.59.7",
-		"autoprefixer": "^10.4.14",
-		"eslint": "^8.41.0",
-		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"highlight.js": "^11.8.0",
-		"postcss": "^8.4.23",
-		"prettier": "^2.8.8",
-		"prettier-plugin-svelte": "^2.10.0",
+		"@sveltejs/adapter-vercel": "^3.0.3",
+		"@sveltejs/kit": "^1.25.1",
+		"@tailwindcss/typography": "^0.5.10",
+		"@typescript-eslint/eslint-plugin": "^6.7.4",
+		"@typescript-eslint/parser": "^6.7.4",
+		"autoprefixer": "^10.4.16",
+		"eslint": "^8.51.0",
+		"eslint-config-prettier": "^9.0.0",
+		"highlight.js": "^11.9.0",
+		"postcss": "^8.4.31",
+		"prettier": "^3.0.3",
+		"prettier-plugin-svelte": "^3.0.3",
 		"saos": "^1.3.1",
-		"svelte": "^3.59.1",
-		"svelte-check": "^3.4.2",
-		"tailwindcss": "^3.3.2",
-		"tslib": "^2.5.2",
-		"typescript": "^5.0.4",
-		"vite": "^4.3.9",
-		"vitest": "^0.31.1"
+		"svelte": "^4.2.1",
+		"svelte-check": "^3.5.2",
+		"tailwindcss": "^3.3.3",
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2",
+		"vite": "^4.4.11",
+		"vite-plugin-tailwind-purgecss": "^0.1.3",
+		"vitest": "^0.34.6"
 	},
 	"type": "module",
 	"dependencies": {
+		"@types/node": "^20.8.3",
+		"eslint-plugin-svelte": "^2.34.0",
 		"radash": "^11.0.0",
-		"svelte-markdown": "^0.2.3"
+		"svelte-markdown": "^0.4.0"
 	}
 }
