--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	"type": "module",
 	"dependencies": {
 		"@types/node": "^20.8.3",
+		"@vercel/analytics": "^1.1.0",
 		"eslint-plugin-svelte": "^2.34.0",
 		"radash": "^11.0.0",
 		"svelte-markdown": "^0.4.0"
