--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
 		"autoprefixer": "^10.4.16",
 		"eslint": "^8.51.0",
 		"eslint-config-prettier": "^9.0.0",
-		"highlight.js": "^11.9.0",
 		"postcss": "^8.4.31",
 		"prettier": "^3.0.3",
 		"prettier-plugin-svelte": "^3.0.3",
@@ -46,6 +45,7 @@
 		"@vercel/analytics": "^1.1.0",
 		"eslint-plugin-svelte": "^2.34.0",
 		"radash": "^11.0.0",
-		"svelte-markdown": "^0.4.0"
+		"svelte-markdown": "^0.4.0",
+		"highlight.js": "^11.9.0"
 	}
 }
