--- a/package.json
+++ b/package.json
@@ -14,38 +14,40 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.38.1",
-		"@skeletonlabs/skeleton": "^2.2.0",
-		"@skeletonlabs/tw-plugin": "^0.2.1",
-		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/adapter-vercel": "^3.0.3",
-		"@sveltejs/kit": "^1.25.1",
-		"@tailwindcss/typography": "^0.5.10",
-		"@typescript-eslint/eslint-plugin": "^6.7.4",
-		"@typescript-eslint/parser": "^6.7.4",
-		"autoprefixer": "^10.4.16",
-		"eslint": "^8.51.0",
-		"eslint-config-prettier": "^9.0.0",
-		"postcss": "^8.4.31",
-		"prettier": "^3.0.3",
-		"prettier-plugin-svelte": "^3.0.3",
-		"saos": "^1.3.1",
-		"svelte": "^4.2.1",
-		"svelte-check": "^3.5.2",
-		"tailwindcss": "^3.3.3",
-		"tslib": "^2.6.2",
-		"typescript": "^5.2.2",
-		"vite": "^4.4.11",
-		"vite-plugin-tailwind-purgecss": "^0.1.3",
-		"vitest": "^0.34.6"
+		"@eslint/compat": "^1.2.5",
+		"@eslint/js": "^9.18.0",
+		"@playwright/test": "^1.50.1",
+		"@skeletonlabs/skeleton": "^3.0.0-next.12",
+		"@skeletonlabs/skeleton-svelte": "^1.0.0-next.21",
+		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@tailwindcss/typography": "^0.5.15",
+		"@tailwindcss/vite": "^4.0.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/svelte": "^5.2.4",
+		"eslint": "^9.18.0",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-svelte": "^3.0.0",
+		"globals": "^16.0.0",
+		"jsdom": "^26.0.0",
+		"mdsvex": "^0.12.3",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
+		"tailwindcss": "^4.0.0",
+		"tslib": "^2.8.1",
+		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.20.0",
+		"vite": "^6.0.0",
+		"vitest": "^3.0.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@types/node": "^20.8.3",
-		"@vercel/analytics": "^1.1.0",
-		"eslint-plugin-svelte": "^2.34.0",
-		"radash": "^11.0.0",
-		"svelte-markdown": "^0.4.0",
-		"highlight.js": "^11.9.0"
+		"@vercel/analytics": "^1.5.0",
+		"highlight.js": "^11.11.1",
+		"radash": "^12.1.0"
 	}
 }
