--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 	"dependencies": {
 		"@vercel/analytics": "^1.5.0",
 		"highlight.js": "^11.11.1",
+		"prism-themes": "^1.9.0",
 		"radash": "^12.1.0"
 	}
 }
